<resources>
    <string name="enter_setlistfm_userId">Enter Setlist.fm User ID Here</string>
    <string name="clear">Clear</string>
    <string name="go">Go</string>
    <string name="wrong_message">Something has gone wrong!</string>
    <string name="unresolveable_userId_message">Unresolveable User ID!</string>
    <string name="unknown_userId_message">Unknown User ID!</string>
    <string name="unknown_userId">unknown userId</string>
    <string name="no_setlist_data">No setlist data to analyze!</string>
    <string name="distribution_of_shows_by_month">Distribution of Shows by Month</string>
    <string name="gap_between_shows">Gap Between Shows</string>
    <string name="gap_between_same_artist">Gap Between Same Artist</string>
    <string name="longest">&lt;b>Longest:&lt;/b> %s</string>
    <string name="shortest">&lt;b>Shortest:&lt;/b> %s</string>
    <string name="user">&lt;b>%1$s:&lt;/b> %2$s</string>
    <string name="most_visited_venues">Top 5 Venues By Visit</string>
    <string name="same_user">Can\'t compare to the same user!</string>
    <string name="number_of_shows_attended">Number of Shows Attended</string>
    <string name="average_gap_between_shows">Average Gap Between Shows</string>
    <string name="artists_in_common">Artists In Common</string>
    <string name="venues_in_common">Venues In Common</string>
    <string name="shows_in_common">Shows In Common</string>
    <string name="date">&lt;b>Date:&lt;/b> %s</string>
    <string name="venue">&lt;b>Venue:&lt;/b> %s</string>
    <string name="sign_in_with_google">Sign In With Google</string>
    <string name="fetching_data_for">Fetching Setlist.fm Data For</string>
    <string name="save">Save</string>
    <string name="enter_show_note_here">Enter Show Note Here</string>
    <string name="edit">Edit</string>
    <string name="exit">Exit</string>
    <string name="show_notes">Show Notes</string>
    <string name="no_note_saved">No Note Saved</string>
    <string name="empty_string" />
    <string name="menu_label_licenses">Licenses</string>
    <string name="menu_label_privacy">Privacy Policy</string>
    <string name="setlistfm_homepage">"https://www.setlist.fm/"</string>
    <string name="setlistfm_attribution_message">"Powered by "</string>
    <string name="setlistfm">"setlist.fm"</string>
    <string name="powered_hyperlink">Powered by &lt;a href=%1$s>%2$s&lt;/a></string>
    <string name="hyperlink">&lt;a href=%1$s>%2$s&lt;/a></string>
    <string name="privacy_policy_url">https://github.com/rstockbridge/ShowStats/tree/master/playstore/privacy_policy.md</string>
    <string name="sign_out">Sign Out</string>
    <string name="delete_account">Delete Account</string>
    <string name="force_crash">Force Crash</string>
    <string name="confirm_delete">Are you sure you want to delete your account?</string>
    <string name="Yes">yes</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <plurals name="day_plural">
        <item quantity="one">%d day</item>
        <item quantity="other">%d days</item>
    </plurals>
    <plurals name="artist_plural">
        <item quantity="one">&lt;b>Artist:&lt;/b> %s</item>
        <item quantity="other">&lt;b>Artists:&lt;/b> %s</item>
    </plurals>
</resources>
