<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:padding="16dp">

    <RelativeLayout
        android:id="@+id/note_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <TextView
            android:id="@+id/displayed_note_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="24sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edit_note_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:counterEnabled="true"
            app:counterMaxLength="1000" >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_note_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableRight="@drawable/ic_clear"
                android:drawableTint="@color/colorAccent"
                android:hint="@string/enter_show_note_here"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:maxLength="1000"
                android:textSize="24sp"
                tools:ignore="RtlHardcoded,UnusedAttribute" />

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:gravity="center_horizontal"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/edit_note_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edit"
                android:textSize="20sp" />

            <Button
                android:id="@+id/save_note_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save"
                android:textSize="20sp" />

            <Button
                android:id="@+id/exit_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/exit"
                android:textSize="20sp" />

        </LinearLayout>

    </RelativeLayout>

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerInParent="true"
        android:indeterminate="true" />

</RelativeLayout>
