<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal">

    <EditText
        android:id="@+id/edit_user2_userId_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_userId"
        android:textSize="24sp"
        android:gravity="center_horizontal"
        android:inputType="text"
        android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789_-"
        android:paddingTop="16dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal" >

        <Button
            android:id="@+id/clear_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clear"
            android:textSize="20sp"
            android:enabled="false"
            android:paddingStart="16dp"
            android:paddingEnd="16dp" />

        <Button
            android:id="@+id/submit_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            android:textSize="20sp"
            android:enabled="false"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:layout_marginBottom="16dp" />

    </LinearLayout>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:background="#444" />

    <ScrollView
        android:id="@+id/scrollview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:clipToPadding="false"
        android:scrollbarStyle="outsideOverlay"
        android:visibility="invisible" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/number_of_shows_attended"
                android:textSize="20sp"
                android:textStyle="bold"/>

            <com.github.mikephil.charting.charts.HorizontalBarChart
                android:id="@+id/bar_chart"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginBottom="8dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/artists_in_common"
                android:textSize="20sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/common_artists"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:layout_marginBottom="24dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/venues_in_common"
                android:textSize="20sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/common_venues"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:layout_marginBottom="24dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/shows_in_common"
                android:textSize="20sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/common_shows"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:layout_marginBottom="24dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/average_gap_between_shows"
                android:textSize="20sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/average_show_gap1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/average_show_gap2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp" />

        </LinearLayout>


    </ScrollView>

</LinearLayout>
